working on horz/vert layout bugs (issue52)

--- a/src/css/respond.css
+++ b/src/css/respond.css
@@ -164,7 +164,7 @@
 */
 }
 
-.responsive-mode .main-view-horz {
+.responsive-mode.response-horz .main-view {
     position: absolute;
 	right: 0;
 	top: 0;
@@ -172,7 +172,7 @@
 	margin-top: 0;
 }
 
-.responsive-mode .response-horz {
+.responsive-mode.response-horz #response {
 	height: 100%;
 }
 
@@ -465,7 +465,7 @@ input[type='range']::-webkit-slider-thumb {
 	box-shadow: inset 0px 1px 0px #4D4D4D;
 }
 
-#vertButt:active, .vert-active {
+#vertButt:active, .response-vert #vertButt {
 	background-image: url('../images/vertIcon.png'), -webkit-linear-gradient(bottom, hsl(180, 3%, 20%) 0%, hsl(180, 2%, 17%) 100%) !important;
 	background-repeat: no-repeat !important;
 	border: 1px solid hsl(0, 0%, 9%) !important;
@@ -495,7 +495,7 @@ input[type='range']::-webkit-slider-thumb {
 	box-shadow: inset 0px 1px 0px #4D4D4D;
 }
 
-#horzButt:active, .horz-active {
+#horzButt:active, .response-horz #horzButt {
 	background-image: url('../images/horzIcon.png'), -webkit-linear-gradient(bottom, hsl(180, 3%, 20%) 0%, hsl(180, 2%, 17%) 100%) !important;
 	background-repeat: no-repeat;
 	border: 1px solid hsl(0, 0%, 9%) !important;
